aligning bug

--- a/Password.css
+++ b/Password.css
@@ -593,11 +593,12 @@ footer .copyright p {
 
     .title {
         width: 350px;
+        justify-content: center;
+        align-items: center;
     }
     
     .title h1 {
         font-size: 24px;
-        text-align: center;
     }
 
     .form {
